# course_work_3

./: README.md  pyproject.toml
tests/: test_functions.py
utils/: functions.py  main.py
