[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Alyona Starkova <alyona.starrkova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
